# CQUPT_Raft

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  NOTREAD.md  README.md  config.txt  main.cpp  test.ps1  test.sh  vcpkg.json
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
apps/: AGENTS.md  main.cpp  raft_kv_client.cpp
docs/: CONSISTENCY_LAYER_TRANSITION_PLAN.md  CURRENT_INDUSTRIALIZATION_ANALYSIS.md  PERSISTENCE_DURABILITY_CONTRACT.md
include/raft/: command.h  config.h  logging.h  propose.h  raft_node.h  raft_service_impl.h  raft_storage.h  replicator.h  snapshot_storage.h  state_machine.h  thread_pool.h
modules/raft/common/: AGENTS.md  command.cpp  config.h
modules/raft/node/: AGENTS.md  raft_node.cpp  raft_node.h
modules/raft/replication/: AGENTS.md  replicator.cpp  replicator.h
modules/raft/runtime/: AGENTS.md  logging.h  min_heap_timer.cpp  min_heap_timer.h  thread_pool.cpp
modules/raft/service/: AGENTS.md  kv_service_impl.cpp  kv_service_impl.h  raft_service_impl.cpp
modules/raft/state_machine/: AGENTS.md  state_machine.cpp  state_machine.h
modules/raft/storage/: AGENTS.md  raft_storage.cpp  raft_storage.h  snapshot_storage.cpp  snapshot_storage.h
proto/: AGENTS.md  raft.proto
scripts/: acceptance_cluster.sh
specs/003-persistence-reliability/: decisions.md  plan.md  progress.md  spec.md  tasks.md
specs/003-persistence-reliability/phase-reports/: final-persistence-validation-plan.md  phase-1-durability-contract.md  phase-2-storage-log-fsync.md  phase-3-meta-hard-state-fsync.md  phase-3a-meta-hard-state-plan.md  phase-4-snapshot-atomic-publish.md  phase-4a-snapshot-atomic-publish-plan.md  phase-5-restart-recovery-diagnostics.md  phase-5a-restart-recovery-diagnostics-plan.md  phase-6-crash-failure-injection-tests.md  phase-6a-crash-failure-injection-plan.md
specs/004-raft-industrialization/: data-model.md  plan.md  platform-support.md  quickstart.md  research.md  spec.md  tasks.md  validation-matrix.md  windows-full-managed-failure-matrix.md
specs/004-raft-industrialization/checklists/: requirements.md
specs/004-raft-industrialization/contracts/: failure-injection-boundaries.md  validation-entrypoints.md
src/: command.cpp  main.cpp  raft_node.cpp  raft_service_impl.cpp  raft_storage.cpp  replicator.cpp  snapshot_storage.cpp  state_machine.cpp  thread_pool.cpp
tests/: CMakeLists.txt  README.md  persistence_more_test.cpp  persistence_test.cpp  raft_integration_test.cpp  root_cmake_snippet.txt  snapshot_test.cpp  test_command.cpp  test_kv_service.cpp  test_min_heap_timer.cpp  test_raft_commit_apply.cpp  test_raft_election.cpp  test_raft_log_replication.cpp  test_raft_replicator_behavior.cpp  test_raft_segment_storage.cpp  test_raft_snapshot_catchup.cpp  test_raft_snapshot_diagnosis.cpp  test_raft_snapshot_restart.cpp  test_raft_split_brain.cpp  test_snapshot_storage_reliability.cpp  test_state_machine.cpp  test_t017_leader_switch_ordering.cpp  test_temp.cpp  test_thread_pool.cpp
