include(FetchContent)
include(GoogleTest)

if (MSVC)
  set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
endif()

FetchContent_Declare(
  googletest
  URL https://github.com/google/googletest/archive/refs/tags/v1.14.0.zip
)

if (MSVC)
  set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
endif()

FetchContent_MakeAvailable(googletest)

function(add_raft_gtest target_name source_file)
  add_executable(${target_name} ${source_file})
  target_link_libraries(${target_name}
    PRIVATE
      raft_core
      GTest::gtest_main
  )
  target_compile_definitions(${target_name}
    PRIVATE
      RAFT_TEST_BINARY_DIR="$<TARGET_FILE_DIR:${target_name}>"
  )
  gtest_discover_tests(${target_name}
    DISCOVERY_TIMEOUT 60
    DISCOVERY_MODE PRE_TEST
  )
endfunction()

# 默认只注册这次修复/回归相关的测试，避免每次都把旧的全量套件跑一遍。
# 需要完整测试时，重新配置 CMake：-DRAFT_TEST_FULL_SUITE=ON
option(RAFT_TEST_FULL_SUITE "Register the full Raft GoogleTest suite" OFF)

if (RAFT_TEST_FULL_SUITE)
  add_raft_gtest(test_command test_command.cpp)
  add_raft_gtest(test_state_machine test_state_machine.cpp)
  add_raft_gtest(test_min_heap_timer test_min_heap_timer.cpp)
  add_raft_gtest(test_thread_pool test_thread_pool.cpp)
  add_raft_gtest(test_raft_election test_raft_election.cpp)
  add_raft_gtest(test_raft_log_replication test_raft_log_replication.cpp)
  add_raft_gtest(test_raft_commit_apply test_raft_commit_apply.cpp)
  add_raft_gtest(persistence_test persistence_test.cpp)
  add_raft_gtest(snapshot_test snapshot_test.cpp)
  add_raft_gtest(raft_integration_test raft_integration_test.cpp)
  add_raft_gtest(test_raft_snapshot_catchup test_raft_snapshot_catchup.cpp)
  add_raft_gtest(test_raft_snapshot_restart test_raft_snapshot_restart.cpp)
  add_raft_gtest(test_raft_snapshot_diagnosis test_raft_snapshot_diagnosis.cpp)
  add_raft_gtest(test_raft_segment_storage test_raft_segment_storage.cpp)
  add_raft_gtest(test_snapshot_storage_reliability test_snapshot_storage_reliability.cpp)
  add_raft_gtest(test_raft_replicator_behavior test_raft_replicator_behavior.cpp)
else()
  add_raft_gtest(test_raft_log_replication test_raft_log_replication.cpp)
  add_raft_gtest(test_raft_commit_apply test_raft_commit_apply.cpp)
  add_raft_gtest(persistence_test persistence_test.cpp)
  add_raft_gtest(snapshot_test snapshot_test.cpp)
  add_raft_gtest(raft_integration_test raft_integration_test.cpp)
  add_raft_gtest(test_raft_segment_storage test_raft_segment_storage.cpp)
endif()